# Auto-Caller

./: .env  .env.example  .gitignore  App.js  PRODUCTION_300K_SUMMARY.md  README.md  app.css  app.py  cloudbuild-dev.yaml  cloudbuild-prod.yaml  compose.override.yml  compose.prod.yml  compose.test.yml  compose.yml  deploy.sh  load_test.py  release.sh  run-tests.sh  simple_load_test.py  test_production.py
Backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml  pytest.ini  requirements.txt
Backend/app/: __init__.py  config.py  main.py
Backend/app/api/: deps.py
Backend/app/api/endpoints/: calls.py  schedule_call.py
Backend/app/api/keystone/: main.py
Backend/app/api/project/: main.py
Backend/app/core/: config.py  db.py  logger.py  scheduler.py  security.py
Backend/app/emails/: utils.py
Backend/app/jobs/: expire_users.py
Backend/app/middleware/: request_logger.py
Backend/app/migrations/: env.py
Backend/app/migrations/keystone/: 0108b2671259_renamed_model_id_to_record_id_in_.py  01fb872a00a7_user_expiry_date_is_optional_in_.py  084a21914bc7_remove_items_table.py  0c85b04e328d_add_is_active_to_group_model.py  0dc635fc8cf0_add_metadata_column_to_notifications_.py  13fda1c1befa_updated_expires_at_and_email_status_id_.py  1980b7b19dd3_update_invitations_table.py  2025_04_07_1851-4b3249bd1810_init_keystone.py  2025_04_13_1813-32cdaa066e45_add_timezone_awareness_to_last_login.py  2025_04_14_0119-93927e712a23_rename_user_suspended_to_deactivated.py  2025_04_14_0705-e686035a6982_add_timezone_aware_data_types.py  254a120b92d8_create_groups_table.py  3b272478f2c1_update_users_table.py  3e529753ab2e_update_tables_for_delete_records_on_.py  449f767abd6d_create_invitations_table.py  45d59060e780_create_password_reset_table.py  581c436281ae_create_notifications_table.py  5e8ac6e9ff0e_updates_to_timestamps.py  7fa58b9f74ba_add_invitation_registrations_table.py  (+11 more)
Backend/app/models/: __init__.py  call_session.py  conversation.py  group.py  invitation.py  message.py  notification.py  password_reset.py  transaction.py  user.py  user_settings.py
Backend/app/routes/: __init__.py  auth.py
Backend/app/schemas/: auth.py  common.py  conversation.py  group.py  invitation.py  notification.py  transaction.py  user.py  user_settings.py
Backend/app/services/: twilio_service.py
Backend/app/utils/: cache.py  decorators.py  notification.py  transaction.py
Backend/cli/: README.md  __init__.py  __main__.py  app_commands.py  common.py  server_commands.py  user_commands.py  utils.py
Backend/cli/db_commands/: __init__.py  backup_commands.py  commands.py  connection_commands.py  migration_commands.py  utils.py
Backend/data_pipeline/: README.md  cli.py  config.py  decorators.py  initialize_data.py
Backend/data_pipeline/importers/: __init__.py  cli.py  csv_importer.py  user_importer.py
Backend/data_pipeline/scripts/: __init__.py  cli.py  transform_users.py
Backend/data_pipeline/seeders/: __init__.py  base_seeder.py  cli.py  group_seeder.py  notification_seeder.py  sqlmodel_factory.py  user_seeder.py  utils.py
Backend/tests/: conftest.py  test_config.py  test_db.py
(+203 files in other folders)
